[package]
name = "fences"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.10.0"
grid = "0.13.0"
log = "0.4.21"
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.32"
simple_logger = "4.3.3"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "solver"
harness = false
