# workspace = { members = ["examples/bevy-game"] }
[package]
name = "fences"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
colored = "2.1.0"
either = "1.10.0"
grid = "0.13.0"
log = "0.4.21"
petgraph = "0.6.4"
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.32"
simple_logger = "4.3.3"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "bm"
harness = false
